# app

./: .replit  Dockerfile  Procfile  README.md  ai_model.py  app.py  card_matcher.py  certificate_generator.py  deployment_guide.md  docker-compose.yml  explainable_ai.py  feedback_manager.py  image_utils.py  main.py  model_retrainer.py  models.py  ocr_processor.py  official_card_database.py  pyproject.railway.toml  pyproject.toml  railway.toml  replit.md  replit_auth.py  routes.py  sample_pokemon_data.py  start.sh  training_feedback.json  translations.py  vercel.json  wsgi.py
